# ESP32_ZACUS

./: .gitignore  API_AUTH_ANALYSIS_BEARER_TOKEN.md  AUDIT_COMPLET_2026-03-01.md  AUDIT_QUICK_START.md  BEARER_TOKEN_ENDPOINT_CHECKLIST.md  BEARER_TOKEN_EXECUTIVE_SUMMARY.md  BEARER_TOKEN_FILES_GUIDE.md  BEARER_TOKEN_IMPLEMENTATION_SUMMARY.md  BEARER_TOKEN_INTEGRATION_QUICK_START.md  CODE_AUDIT_ET_PLAN_ACTION_2026-03-02.md  PHASE8_COMPLETION.md  PHASE9_PLAN.md  PLAN_ACTION_SEMAINE1.md  README.md  README_ESP32_ZACUS.md  REMEDIATION_GUIDE.md  RISK_ANALYSIS.md  SECRETS_AUDIT_DETAILED.csv  SECRETS_AUDIT_EXECUTIVE_SUMMARY.md  SECRETS_AUDIT_INDEX.md  SECRETS_AUDIT_REPORT.json  SECRETS_AUDIT_TLDR.md  SECURITY_AUDIT_FR.md  SECURITY_AUDIT_REPORT.json  TODO_IMPLEMENTATION_PLAN.md  VALIDATION_P0_P1_COMPLETE.md  VALIDATION_P1_MUTEX_COMPLETE.md  boot_logs.txt  platformio.ini  test_amiga_ui_deploy.py  test_boot_logs.py
boards/: freenove_esp32_s3_wroom.json
box3_voice/: CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
docs/: FNK0102H_SOURCE_OF_TRUTH.md  QUICKSTART.md
partitions/: freenove_esp32s3_app4mb_fs12096kb.csv  freenove_esp32s3_app4mb_fs3840kb.csv  freenove_esp32s3_app6mb_fs6mb.csv
puzzles/p1_sequence_sonore/main/: CMakeLists.txt  main.c
scripts/: audit_boot_log.py  bootstrap_platformio.sh  check_memory_budget.sh  doctor_repo.sh  fetch_nes_homebrew_roms.sh  flash_monitor_audit.sh  generate_ui_assets_fs.sh  phase8_dalle_icons.py  phase8_retry_icons.py  pio_prepare_webui_fonts.py  serial_boot_capture.py
specs/: HUMAN entry.md  (+1 more)
(+207 files in other folders)
